메인페이지 이미지 추가
스타일 등 정리필요

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
             content="<%= BASE_URL %>desc.png"
         />
         <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-        <title><%= htmlWebpackPlugin.options.title %></title>
+        <title>EEryCode</title>
     </head>
     <body>
         <noscript>
