--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta property="og:url" content="http://www.underloading.com" />
+        <meta property="og:url" content="http://www.eerycode.com" />
         <meta property="og:description" content="디스코드 클론코딩 제작 페이지입니다." />
         <meta
             property="og:image"
